// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`outlineOffset renders 0 1`] = `
Array [
  .c0 {
  outline-offset: 0;
}

<div
    className="c0"
  />,
  .c0 {
  outline-offset: 0;
}

<div
    className="c0"
  />,
  .c0 {
  outline-offset: 0;
}

<div
    className="c0"
  />,
  .c0 {
  outline-offset: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`outlineOffset renders function 1`] = `
Array [
  .c0 {
  outline-offset: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  outline-offset: has;
}

<div
    className="c0"
  />,
  .c0 {
  outline-offset: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  outline-offset: has;
}

<div
    className="c0"
  />,
]
`;

exports[`outlineOffset renders invalid theme path 1`] = `
Array [
  .c0 {
  outline-offset: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  outline-offset: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  outline-offset: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  outline-offset: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`outlineOffset renders negative number 1`] = `
Array [
  .c0 {
  outline-offset: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  outline-offset: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  outline-offset: -42365px;
}

<div
    className="c0"
  />,
  .c0 {
  outline-offset: -42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`outlineOffset renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    outline-offset: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    outline-offset: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    outline-offset: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    outline-offset: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    outline-offset: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    outline-offset: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    outline-offset: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    outline-offset: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    outline-offset: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    outline-offset: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    outline-offset: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    outline-offset: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    outline-offset: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    outline-offset: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    outline-offset: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    outline-offset: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`outlineOffset renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    outline-offset: July;
  }
}

@media April {
  .c0 {
    outline-offset: August;
  }
}

@media January {
  .c0 {
    outline-offset: September;
  }
}

@media April {
  .c0 {
    outline-offset: November;
  }
}

@media June {
  .c0 {
    outline-offset: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    outline-offset: July;
  }
}

@media April {
  .c0 {
    outline-offset: August;
  }
}

@media January {
  .c0 {
    outline-offset: September;
  }
}

@media April {
  .c0 {
    outline-offset: November;
  }
}

@media June {
  .c0 {
    outline-offset: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    outline-offset: January;
  }
}

@media April {
  .c0 {
    outline-offset: December;
  }
}

@media January {
  .c0 {
    outline-offset: April;
  }
}

@media April {
  .c0 {
    outline-offset: May;
  }
}

@media June {
  .c0 {
    outline-offset: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    outline-offset: January;
  }
}

@media April {
  .c0 {
    outline-offset: December;
  }
}

@media January {
  .c0 {
    outline-offset: April;
  }
}

@media April {
  .c0 {
    outline-offset: May;
  }
}

@media June {
  .c0 {
    outline-offset: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`outlineOffset renders postitive number 1`] = `
Array [
  .c0 {
  outline-offset: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  outline-offset: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  outline-offset: 42365px;
}

<div
    className="c0"
  />,
  .c0 {
  outline-offset: 42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`outlineOffset renders string 1`] = `
Array [
  .c0 {
  outline-offset: July;
}

<div
    className="c0"
  />,
  .c0 {
  outline-offset: July;
}

<div
    className="c0"
  />,
  .c0 {
  outline-offset: June;
}

<div
    className="c0"
  />,
  .c0 {
  outline-offset: June;
}

<div
    className="c0"
  />,
]
`;

exports[`outlineOffset renders valid theme path 1`] = `
Array [
  .c0 {
  outline-offset: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  outline-offset: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  outline-offset: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  outline-offset: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
